Unreleased
------------------------------------------------------------------------

  * Install event.h in $INCLUDEDIR/kqueue/sys, rather than $INCLUDEDIR/sys

  * Add support for building native Debian packages using Docker

2019-02-06  v2.3.1
------------------------------------------------------------------------

  * Support more knote flags
    (Credit: Dmitry Selyutin, PR #49)

  * Debian packaging updates
    (Credit: Matthew Newton)

2018-11-25  v2.3.0
------------------------------------------------------------------------

  * kevent: refactor to remove goto statement
    (Credit: Cameron Nemo)

  * Multiple fixes for compilation issues with GCC 8.1
    (Credit: Arran Cudbard-Bell)

  * Add a monitoring thread that takes care of cleaning up closed kqueues
    (Credit: Philippe Wooding)

  * Multiple bug fixes for leaking descriptors in kn_delete()
    (Credit: Philippe Wooding)

  * Fix build errors on Linux systems that do not use glibc
    (Credit: maxice8)

2017-11-26  v2.2.0
------------------------------------------------------------------------

 * Fixed: the EOF flag should only be set on stream sockets with a zero length r
ead
   Author: Arran Cudbard-Bell <a.cudbardb@freeradius.org>

 * Fix to deal with inotify events containing filenames correctly.
   Author: Arran Cudbard-Bell <a.cudbardb@freeradius.org>

 * Fix to allow libpcap FDs to be used.
   Author: Philippe Wooding <philippe.wooding@networkradius.com>

 * Switch to CMake as the build and packaging system.

2016-07-24  v2.1.0
------------------------------------------------------------------------

  * Fix an endianness issue when calling ioctl on Linux.
    (Credit: Vivian Kong)

  * Allow tests to be built from separate build directory.
    (Credit: Chris Bailey)

  * Add support for kevent64(2) timers from Darwin.
    (Credit: Hubertus Franke)

  * Set EPOLLONESHOT for EPOLL_CTL_ADD after knote creation.
    (Credit: Ian Partridge)
